# fweb

./: .gitignore  Cargo.toml  Makefile  rustfmt.toml
posts/: 01_hello_world.md
src/: config.rs  error.rs  main.rs  template.rs
