[package]
name = "fweb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = { version = "0.9.1", default-features = false, features = ["simd"] }
tokio = { version = "1.17", default-features = false, features = ["rt-multi-thread", "macros", "fs", "io-std"] }
